token失效验证处理；
